--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Dashboard made with react-admin framework",
   "main": "index.js",
   "scripts": {
-    "server": "json-server --watch db.json --port 5000"
+    "server": "json-server --watch db.json --port 5000",
+    "frontend": "npm start --prefix frontend"
   },
   "repository": {
     "type": "git",
