--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server": "json-server --watch db.json --port 5000",
-    "frontend": "npm start --prefix frontend"
+    "frontend": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run frontend\""
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/patrickcash/react-admin-dashboard#readme",
   "dependencies": {
+    "concurrently": "^7.0.0",
     "json-server": "^0.17.0"
   }
 }
